# collatz

./: Cargo.toml
src/: cli.yaml  lib.rs  main.rs
tests/: test.rs
