[package]
name = "collatz_cli"
version = "0.1.0"
authors = ["Braden Mabey <braden.mabey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde_json = "1.0.66"